Acerto de funcionalidades

--- a/src/index.html
+++ b/src/index.html
@@ -42,8 +42,8 @@
   <!-- The main bundle js is generated during the build process -->
   <script src="build/main.js"></script>
 
-  <script src="markerclusterer.min.js"></script>
-  <script src="oms.min.js"></script>
+  <script src="assets/js/markerclusterer.min.js"></script>
+  <script src="assets/js/oms.min.js"></script>
 
 </body>
 </html>
